Bug 140624 - If an iCal component (VEvent / VTODO) does not contain an ORGANIZER property the line "ORGANIZER:MAILTO: " is added. This breaks the ical file (and as far as I know also the ical rfc) and other programs have trouble reading the ical file with this line
Summary: If an iCal component (VEvent / VTODO) does not contain an ORGANIZER property ...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-01-25 22:17 UTC by Guido Diepen
Modified: 2007-01-26 05:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guido Diepen 2007-01-25 22:17:39 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    Debian testing/unstable Packages

I recently found this problem after I started working on a syncing library.

The following problem occurs: The program that I use to update the iCal files does not make use of (and thus does not write) a ORGANIZER property for both VEVENTS and VTODO's. 

Thus, the program I use creates the following VEVENT:
BEGIN:VEVENT
UID:1169759152775-1
DTSTART:20070125T213000
DTEND:20070125T233000
X-MOZILLA-ALARM-DEFAULT-LENGTH:15
CLASS:PUBLIC
STATUS:CONFIRMED
SUMMARY:Testaaaaaaaaaaaaa
BEGIN:VALARM
TRIGGER;VALUE=DURATION:-PT15M
END:VALARM
END:VEVENT



This Event does show up in my KOrganizer program without a problem. But, as soon as I start modifying things it changes to:
BEGIN:VEVENT
DTSTAMP:20070125T210920Z
ORGANIZER:MAILTO:
X-MOZILLA-ALARM-DEFAULT-LENGTH:15
CREATED:20070125T210729Z
UID:1169759152775-1
SEQUENCE:1
LAST-MODIFIED:20070125T210920Z
SUMMARY:Testaaaaaaaaaaaaa - changed within korganizer
STATUS:CONFIRMED
CLASS:PUBLIC
PRIORITY:5
DTSTART:20070125T203000Z
DTEND:20070125T223000Z
TRANSP:OPAQUE
BEGIN:VALARM
DESCRIPTION:
ACTION:DISPLAY
TRIGGER;VALUE=DURATION:-PT15M
END:VALARM
END:VEVENT

Some minor things have changed, but all of those changes are read by both programs I use. The only problem part is that KOrganizer added the line:
ORGANIZER:MAILTO:
which breaks the reading within other files, since as far as I could see this is not valid according to the RFC for iCal.

My guess is that there are three possible solutions:
* Leave the line out
* add line with MAILTO:UNKOWN@unknown.org           //NOT BEST SOLUTION
* add line with default ORGANIZER that is the default that is used for creating new events within KOrganizer.

Currently I can 'solve' the problem by changing the line to
ORGANIZER;CN=Guido Diepen:MAILTO:valid@email.address.com


My guess is that the first and the second options (leaving it out, or add default that is used for creating) are the best solutions.

Regards,

Guido Diepen
Comment 1 Reinhold Kainhofer 2007-01-26 05:06:57 UTC
SVN commit 627230 by kainhofe:

Don't write out empty, invalid or superfluous fields. If we have an empty organizer, an invalid URI would be generated. Fields like Sequence, CLASS, etc. have a default value (defined in rfc 2445), so we don't have to write that default value out and grow the icalendar file even more....

BUG: 140624


 M  +26 -13    icalformatimpl.cpp  
 M  +1 -1      incidence.cpp  
 M  +0 -16     tests/data/Compat/KOrganizer_3.1.ics.ical.ref  
 M  +0 -2      tests/data/Compat/KOrganizer_3.1a.ics.ical.ref  
 M  +0 -6      tests/data/Compat/KOrganizer_3.2.ics.ical.ref  
 M  +0 -2      tests/data/Compat/MSExchange.ics.ical.ref  
 M  +0 -15     tests/data/Compat/Mozilla_1.0.ics.ical.ref  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase01.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase02.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase03.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase04.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase05.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase06.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase07.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase08.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase09.ics  
 M  +0 -1      tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCase10.ics  
 M  +0 -10     tests/data/RecurrenceRule/KAlarm_3.4/KAlarm_TestCases.ics.all  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase01.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase02.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase03.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase04.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase05.vcs.ical.ref  
 M  +0 -2      tests/data/vCalendar/KOrganizer_vCalTestCase06.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase07.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase08.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase09.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase10.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase11.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase12.vcs.ical.ref  
 M  +0 -1      tests/data/vCalendar/KOrganizer_vCalTestCase13.vcs.ical.ref