libkcal/icalformatimpl.cpp
@@ -318,17 +318,23 @@ void ICalFormatImpl::writeIncidence(icalcomponent *parent,Incidence *incidence)
   // unique id
   // If the scheduling ID is different from the real UID, the real
   // one is stored on X-REALID above
-  icalcomponent_add_property(parent,icalproperty_new_uid(
-      incidence->schedulingID().utf8()));
+  if ( !incidence->schedulingID().isEmpty() ) {
+    icalcomponent_add_property(parent,icalproperty_new_uid(
+        incidence->schedulingID().utf8()));
+  }
 
   // revision
-  icalcomponent_add_property(parent,icalproperty_new_sequence(
-      incidence->revision()));
+  if ( incidence->revision() > 0 ) { // 0 is default, so don't write that out
+    icalcomponent_add_property(parent,icalproperty_new_sequence(
+        incidence->revision()));
+  }
 
   // last modification date
-  icalcomponent_add_property(parent,icalproperty_new_lastmodified(
-      writeICalDateTime(incidence->lastModified())));
-
+  if ( incidence->lastModified().isValid() ) {
+   icalcomponent_add_property(parent,icalproperty_new_lastmodified(
+       writeICalDateTime(incidence->lastModified())));
+  }
+  
   // description
   if (!incidence->description().isEmpty()) {
     icalcomponent_add_property(parent,icalproperty_new_description(
@@ -385,11 +391,15 @@ void ICalFormatImpl::writeIncidence(icalcomponent *parent,Incidence *incidence)
       secClass = ICAL_CLASS_PRIVATE;
       break;
   }
-  icalcomponent_add_property(parent,icalproperty_new_class(secClass));
+  if ( secClass != ICAL_CLASS_PUBLIC ) {
+    icalcomponent_add_property(parent,icalproperty_new_class(secClass));
+  }
 
   // priority
-  icalcomponent_add_property(parent,icalproperty_new_priority(
-      incidence->priority()));
+  if ( incidence->priority() > 0 ) { // 0 is undefined priority
+    icalcomponent_add_property(parent,icalproperty_new_priority(
+        incidence->priority()));
+  }
 
   // categories
   QStringList categories = incidence->categories();
@@ -451,8 +461,9 @@ void ICalFormatImpl::writeIncidence(icalcomponent *parent,Incidence *incidence)
   // attachments
   Attachment::List attachments = incidence->attachments();
   Attachment::List::ConstIterator atIt;
-  for ( atIt = attachments.begin(); atIt != attachments.end(); ++atIt )
+  for ( atIt = attachments.begin(); atIt != attachments.end(); ++atIt ) {
     icalcomponent_add_property( parent, writeAttachment( *atIt ) );
+  }
 
   // alarms
   Alarm::List::ConstIterator alarmIt;
@@ -479,7 +490,9 @@ void ICalFormatImpl::writeIncidenceBase( icalcomponent *parent,
       writeICalDateTime( QDateTime::currentDateTime() ) ) );
 
   // organizer stuff
-  icalcomponent_add_property( parent, writeOrganizer( incidenceBase->organizer() ) );
+  if ( !incidenceBase->organizer().isEmpty() ) {
+    icalcomponent_add_property( parent, writeOrganizer( incidenceBase->organizer() ) );
+  }
 
   // attendees
   if ( incidenceBase->attendeeCount() > 0 ) {
@@ -517,7 +530,7 @@ icalproperty *ICalFormatImpl::writeOrganizer( const Person &organizer )
   if (!organizer.name().isEmpty()) {
     icalproperty_add_parameter( p, icalparameter_new_cn(organizer.name().utf8()) );
   }
-  // TODO: Write dir, senty-by and language
+  // TODO: Write dir, sent-by and language
 
   return p;
 }
